syntax = "proto3";
package pb;
option go_package = "github.com/doublemo/baa/internal/proto/pb";

message IMF {
    message Request {
        repeated Content Values = 1;
    }

    message Response {
        bool Ok = 1;
        Content Content = 2;
    }

    message Reply {
        repeated Response Values = 1;
    }

    message Content{
        uint64 MsgId = 1;
        uint64 SeqId = 2;
        uint64 Topic = 3;
        int32  Group = 4;
        string Content = 5;
        uint64 To = 6;
        uint64 From = 7;
        string ContentType = 9;
        uint64 TSeqId = 10;
        uint64 FSeqId = 11;
    }

    message DirtyWords {
        message Request {
            oneof Payload {
                string Add = 1;
                string Delete = 2;
            }
        }

        message Reply {
            bool  OK = 1;
        }
    }
}